export const snapshot = {};

snapshot[`Issue Archive Command - Help Text 1`] = `
stdout:
'
Usage: archive [issueId]

Description:

  Archive an issue                                                                                                                      
                                                                                                                                        
  Linear archives closed issues on its own, and its docs say "archiving happens automatically with no option to manually archive items".
  Prefer closing (issue update --state) and letting auto-archive run, or issue delete to trash. This command calls the issueArchive     
  mutation, which the Linear app and its official MCP server do not expose; archived issues drop out of list, query, and search results 
  unless --include-archived is passed. See https://linear.app/docs/delete-archive-issues                                                

Options:

  -h, --help               - Show this help.                                              
  -y, --confirm            - Skip confirmation prompt                                     
  --bulk         <ids...>  - Archive multiple issues by identifier (e.g., TC-123 TC-124)  
  --bulk-file    <file>    - Read issue identifiers from a file (one per line)            
  --bulk-stdin             - Read issue identifiers from stdin                            

'
stderr:
""
`;

snapshot[`Issue Archive Command - With Confirm 1`] = `
stdout:
"✓ Successfully archived issue: ENG-123: Archive this issue
"
stderr:
""
`;

snapshot[`Issue Archive Command - Requires Confirmation 1`] = `
stdout:
""
stderr:
"✗ Failed to archive issue: Interactive confirmation required
  Use --confirm to skip.
"
`;

snapshot[`Issue Archive Command - Issue Not Found 1`] = `
stdout:
""
stderr:
"✗ Failed to archive issue: Issue not found: ENG-404
"
`;

snapshot[`Issue Archive Command - Already Archived 1`] = `
stdout:
'Issue "ENG-123: Archive this issue" is already archived.
'
stderr:
""
`;

snapshot[`Issue Archive Command - Mutation Failure 1`] = `
stdout:
""
stderr:
"✗ Failed to archive issue: Linear reported the archive as unsuccessful
"
`;

snapshot[`Issue Archive Command - Bulk Archive 1`] = `
stdout:
"Found 2 issue(s) to archive.

✓ Successfully archived 2 issues
"
stderr:
""
`;

snapshot[`Issue Archive Command - Bulk Archive Reports Unknown Issue 1`] = `
stdout:
"Found 2 issue(s) to archive.

Completed: 1/2 issues archived
  ✓ Succeeded: 1
  ✗ Failed: 1

Failed operations:
  - ENG-404: Issue not found
"
stderr:
""
`;

snapshot[`Issue Archive Command - Bulk Requires Confirmation 1`] = `
stdout:
"Found 1 issue(s) to archive.
"
stderr:
"✗ Failed to archive issue: Interactive confirmation required
  Use --confirm to skip.
"
`;

snapshot[`Issue Archive Command - Issue Not Found API Error 1`] = `
stdout:
""
stderr:
"✗ Failed to archive issue: Issue not found: ENG-404
"
`;

snapshot[`Issue Archive Command - Rejects Positional With Bulk 1`] = `
stdout:
""
stderr:
"✗ Failed to archive issue: Cannot combine a positional issue ID with --bulk
  Pass every identifier through --bulk (or --bulk-file / --bulk-stdin), or drop the positional one.
"
`;
